Composer minimum stability has been changed

--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "phpcrystal/restful-api",
     "description": "A RESTful API package for the PHPCrystal framework",
     "license": "MIT",
+    "minimum-stability": "dev",
     "authors": [
         {
             "name": "Andrei Samuilik",
