--- a/composer.json
+++ b/composer.json
@@ -11,5 +11,10 @@
     ],
     "require": {
         "php": ">= 5.6.9"
-    }
+    },
+	"autoload": {
+		"psr-4": {
+			"PHPCrystal\\RESTful\\": "src/"
+		}
+	}
 }
